--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,45 @@ nav a {
   margin-right: 15%;
 }
 
+#breweryInfo {
+  height: 200px;
+  margin: 10px;
+}
+
+section div h2 {
+  font-size: 20px;
+  font-weight: bold;
+}
+section div a {
+  float: left;
+  margin-right: 10px;
+}
+
+section div p {
+  margin: 10px;
+}
+
+#lower {
+  margin-bottom: 10px;
+}
+
+#map {
+  margin: 10px;
+  float: left;
+}
+
+#address {
+  float: right;
+  margin: 10px;
+  /* width: 500px; */
+}
+
+#social {
+  margin: 10px;
+  display: block;
+  float: right;
+}
+
 .checkbox {
   width: 80%;
   margin: auto;
