--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ section div h2 {
   font-size: 20px;
   font-weight: bold;
 }
+
 section div a {
   float: left;
   margin-right: 10px;
@@ -50,25 +51,36 @@ section div p {
   margin: 10px;
 }
 
-#lower {
-  margin-bottom: 10px;
-}
-
 #map {
-  margin: 10px;
+  margin: 10px 25px;
   float: left;
 }
 
 #address {
-  float: right;
-  margin: 10px;
+  /* float: right; */
+  margin: 20px 30px 10px 10px;
   /* width: 500px; */
+  line-height: 25px;
 }
 
 #social {
-  margin: 10px;
-  display: block;
-  float: right;
+  width: 100%;
+  background-color: black;
+  height: 30px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+#social ul li a {
+  text-decoration: none;
+  font-size: 125%;
+  color: lightgray;
+  margin: 1px 5%;
+}
+
+#social ul li img {
+  height: 15px;
+  width: 15px;
 }
 
 .checkbox {
