--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ section div a {
 section #breweryInfo img {
   float: left;
   margin-right: 10px;
+  height: 200px;
 }
 
 section div p {
@@ -106,11 +107,12 @@ section div p {
   font-size: 24px;
 }
 
-/* footer {
-  position: absolute;
-  margin-top: 10px;
-  bottom: 0;
+footer{
+  clear: both;
+  position: bottom;
+  /* margin-top: 10px; */
+  /* bottom: 0; */
   width: 100%;
   text-align: center;
   font-size: 12px;
-} */
+}
