--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -66,6 +66,8 @@ body {
     text-align: center;  
     color: goldenrod;
     font-size: 350%;
+    margin-top: 50px;
+    margin-bottom: 50px; 
   }
   section p {
       text-align: center;
@@ -73,6 +75,7 @@ body {
       margin-left: 25%;
   }
 
-  .map {
-      align: center;
+  #map {
+    margin-top: 100px;
+    text-align: center;
   }
