tried for age, didnt work right

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+#age {
+    align: center;
+}
+}
+
 header, section, footer, aside, nav, article, figure, figcaption {
     display: block;}
 body {
