--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -20,7 +20,7 @@ body {
     color:goldenrod;
   }
   
-  nav {
+  /* nav {
     width: 100%;
     background-color: black;
     height: 20px;
@@ -32,6 +32,63 @@ body {
     font-size: 15px;
     color: lightgray;
     margin-right: 15%;
+  } */
+
+  #main_nav ul {
+    background: white;
+    float: left;
+    -webkit-transition: .5s;
+    transition: .5s;
+  }
+
+  #main_nav li {
+    float: left;
+    position: relative;
+    width: 150px;
+    list-style: none;
+    -webkit-transition: .5s;
+    transition: .5s;
+  }
+
+  #main_nav > ul > li > a, h1 {
+    text-transform: uppercase;
+  }
+
+  #main_nav a {
+    display: block;
+    text-decoration: none;
+    padding: 5px 15px;
+    color: #000;
+  }
+
+  #main_nav ul ul {
+    position: absolute;
+    left: 0;
+    top: 100%;
+    visibility: hidden;
+    opacity: 0;
+  }
+
+  #main_nav ul ul ul {
+    left: 100%;
+    top: 0;
+  }
+
+  #main_nav li:hover, #main_nav li:hover li {
+    background: #ddd;
+  }
+
+  #main_nav li li:hover, #main_nav li li:hover li {
+    background: #bbb;
+  }
+
+  #main_nav li li li:hover {
+    background: #999;
+  }
+
+  #main_nav li:hover > ul {
+    visibility: visible;
+    opacity: 1;
   }
   
   .checkbox {
