--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,9 @@ body {
     margin: 20px auto 20px auto;
     border: 2px solid #000000;
     background-color: #ffffff;}
+
+#marquee {height: 350px;}
+
 header {
     height: 160px;
     background-image: url(../images/brewImages/cheers.jpg);
