--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -1,66 +1,64 @@
+header, section, footer, aside, nav, article, figure, figcaption {
+  display: block;}
 
 body {
-  width: 100%;
-  margin: auto;
-}
+  background-color: #80736A;
+  background-image: url("../images/brewImages/summerdrink.jpg");
+  background-size: cover;
+  background-position: center;
+  font-family: Georgia, Times, serif;
+  line-height: 1.4em;
+  margin: 0px;}
 
-#logo {
-  width: 100%;
-  height: 100px;
-  padding: 10px;
-  background-color: grey;
-  text-align: center;
-}
-
-#logo h1 {
-  font-size: 45px;
-  font-weight: bolder;
-  margin-top: 30px;
-  margin-left: 30px;
-  color:goldenrod;
-}
+  header {
+    height: 160px;
+    background-image: url(../images/brewImages/cheers.jpg);
+    background-size: 950px;
+    background-position: right top;
+  }
   
-  /* nav {
-    width: 100%;
-    background-color: black;
-    height: 20px;
+  #logo h1 {
+    width: 940px;
+    height: 130px;
+    text-align: center;
+    color: rgb(170, 166, 166);
+    font-size: 36px;
+  }
+  
+  nav, footer {
+    clear: both;
+    color: #ffffff;
+    background-color: #80736A;
+    height: 30px;
     text-align: center;
   }
   
-  nav a {
-    text-decoration: none;
-    font-size: 15px;
-    color: lightgray;
-    margin-right: 15%;
-  } */
-
   #main_nav ul {
-    background: white;
     float: left;
     -webkit-transition: .5s;
     transition: .5s;
   }
-
+  
   #main_nav li {
     float: left;
     position: relative;
-    width: 150px;
+    width: 225px;
     list-style: none;
     -webkit-transition: .5s;
     transition: .5s;
   }
-
+  
   #main_nav > ul > li > a, h1 {
     text-transform: uppercase;
   }
-
+  
   #main_nav a {
     display: block;
     text-decoration: none;
     padding: 5px 15px;
     color: #000;
   }
-
+  
   #main_nav ul ul {
     position: absolute;
     left: 0;
@@ -68,29 +66,41 @@ body {
     visibility: hidden;
     opacity: 0;
   }
-
+  
   #main_nav ul ul ul {
     left: 100%;
     top: 0;
   }
-
+  
   #main_nav li:hover, #main_nav li:hover li {
     background: #ddd;
   }
-
+  
   #main_nav li li:hover, #main_nav li li:hover li {
     background: #bbb;
   }
-
+  
   #main_nav li li li:hover {
     background: #999;
   }
-
+  
   #main_nav li:hover > ul {
     visibility: visible;
     opacity: 1;
   }
+
+  #breweryInfo {
+    height: 250px;
+    margin: 10px;
+  }
   
+  #wrapper {
+    width: 940px;
+    margin: 20px auto 20px auto;
+    border: 2px solid #000000;
+    background-color: #ffffff;
+  }
+
   .checkbox {
     width: 80%;
     margin: auto;
@@ -137,6 +147,10 @@ body {
 
 #type-place h3 {
   font-size: 24px;
+}
+
+#someWords {
+  width: 950px;
 }
 
 footer {
