--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -170,9 +170,49 @@ section p {
   position: fixed;
   margin-left: 500px;
   width: 400px;
-  height: 400px;
+  height: 200px;
   background: #FFF;
   z-index: 100;
   -webkit-box-shadow:  0px 0px 0px 9999px rgba(0, 0, 0, 0.5);
   box-shadow:  0px 0px 0px 9999px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  padding: 20px;
+  border: 2px solid black;
+  border-radius: 30px;
+}
+
+#popup h3 {
+  font-size: 36px;
+  margin-bottom: 30px;
+}
+
+#popup p {
+  font-size: 20px;
+  margin-bottom: 50px;
+}
+
+#older {
+  width: 100px;
+  height: 50px;
+  color: white;
+  background-color: #6e8b3d;
+  border-radius: 15px;
+}
+
+#older:hover {
+  background-color: #a2cd5a;
+  color: black;
+}
+
+#young {
+  width: 100px;
+  height: 50px;
+  color: white;
+  background-color: #b22222;
+  border-radius: 15px;
+}
+
+#young:hover {
+  background-color: #ff4040;
+  color: black;
 }
