made some changes to index.css

--- a/css/index.css
+++ b/css/index.css
@@ -55,10 +55,6 @@ nav li {
     transition: .5s;
 }
 
-nav li li {
-    margin-left: 0
-}
-
 #main_nav > ul > li > a, h1 {
     text-transform: uppercase;
   }
@@ -85,11 +81,13 @@ nav li a {
 nav li li {
     padding: 8px;
     margin-top: -2px;
+    margin-left: -30px;
 }
 
 nav li li li {
     padding: 8px;
     margin-top: 0px;
+    margin-left: 2px;
 }
 
 #main_nav li:hover > ul {
