--- a/css/index.css
+++ b/css/index.css
@@ -120,6 +120,7 @@ article {
     clear: both;
     overflow: auto;
     width: 100%;
+    margin-bottom: -40px;
 }
 
 hgroup {
@@ -132,7 +133,7 @@ figure {
     height: 220px;
     padding: 5px;
     margin: 20px;
-    border: 1px solid #eeeeee;
+    /* border: 1px solid #eeeeee; */
 }
 
 figcaption {
